[package]
name = "warp"
version = "0.1.0"
authors = ["anton_misa <anton_misa@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
serde_derive = "1.0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"